# lampions

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  TODO.md  lampions.py  main.tf  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_release_package.yml  run_linting.yml  run_tests.yml
lampions/: __init__.py  __main__.py  console.py
src/: lampions.py  lampions_lambda_function.py  utils.py
src/lampions/: __init__.py  __main__.py  console.py  lambda.py  lambda_function.py  utils.py
terraform/: .terraform.lock.hcl  iam.tf  lambda.tf  main.tf  output.tf  s3.tf  ses.tf  terraform.tfvars  variables.tf
tests/: conftest.py  test_lambda.py  test_terraform.py
