[metadata]
name = lampions
author = Niklas Koep
author_email = lampions@nkoep.net
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: BSD License
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3.7
description =
  Command-line utility to configure Lampions and manage email aliases
license = BSD 3-Clause License
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lampions/lampions

[options]
install_requires =
  boto3==1.12
  loguru
  validate_email
packages = find:
package_dir =
  = src
python_requires = >=3.7

[options.extras_require]
dev =
  moto
  pre-commit
  pytest==7.2.0
  pytest-cov==4.0.0
  sure
all = lampions[dev]

[options.packages.find]
where = src
exclude =
  tests*

[options.entry_points]
console_scripts =
  lampions = lampions:main
